# NewsGap

./: .env.rsshub.example  .gitignore  APP_CONVERSION_COMPARISON.md  BUILD_SUCCESS.md  CLEANUP_VERIFICATION_REPORT.md  CROSS_PLATFORM_MIGRATION_GUIDE.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOYMENT_COMPLETE.md  GEMINI_FIX_SUMMARY.md  MARKDOWN_TEST.md  MIGRATION_PROGRESS.md  MOBILE_QUICKSTART.md  PROXY_GUIDE.md  QUICKFIX.md  QUICK_START.md  README.md  REPORT_TRUNCATION_FIX.md  RosonTODO.md  SCRIPTS_COMPLETED.md  SOURCES_UPDATE_SUMMARY.md  STANDALONE_CROSS_PLATFORM_GUIDE.md  TITLE_FORMAT_UPDATE.md  WSL_PROXY_GUIDE.md  build-desktop.sh  deploy-production.sh  deploy.sh  docker-compose.yml  docker.sh  requirements.txt  start.sh  status.sh  stop.sh  test.sh  test_proxy_feature.py
backend/: .env.example  add_missing_sources.py  analyzer.py  auto_fix_duplicates.py  build-backend.sh  check_disabled_sources.py  check_duplicate_gaming_sources.py  check_source_health.py  clean_sources.py  config.yaml  config_manager.py  delete_unwanted_gaming_sources.py  fix_anime_sources.py  fix_disabled_sources.py  fix_duplicate_sources.py  install_and_test.sh  log_config.py  log_config.yaml  main.py  migrate_categories.py  migrate_database.py  migrate_to_priority_system.py  migrate_to_public_rsshub.py  models.py  newsgap-backend.spec  official_rss_sources.py  remove_all_duplicate_sources.py  remove_duplicate_gaming_sources.py  replace_localhost_rsshub.py  requirements.txt  restore_localhost_sources.py  (+9 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+131 files in other folders)
